[package]
name = "external-csgo-cheat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = ["winuser", "memoryapi", "handleapi", "tlhelp32", "processthreadsapi"] }
egui = "0.23.0"
eframe = "0.23.0"
egui_dock = "0.8.1"
env_logger = "0.10.0"
whoami = "1.4.1"
winit = "0.29.2"
lazy_static = "1.4"
imgui = "0.8"
imgui-winit-support = "0.8"
imgui-opengl-renderer = "0.8"