[package]
name = "external-csgo-cheat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = ["winuser", "memoryapi", "handleapi", "tlhelp32", "processthreadsapi"] }
winit = "0.29.2"
lazy_static = "1.4"
